Add additional logging statements
Fix the metaspace issue
Respond to an invalid content-type appropriately
Add getTool.sh to the scripts

Issue-ID: AAI-2326
Change-Id: Ib4764ba71be78816e549f59ccbdab8ccb14dc4c0
Signed-off-by: Kajur, Harish (vk250x) <vk250x@att.com>